feat: toasts to notify users on auth status

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.notification{
+background: hsl(var(--b2))!important;
+color: hsl(var(--bc))!important;
+}
